--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "homepage": "https://pitifha.github.io/itpoly-web/",
   "dependencies": {
     "cra-template": "1.2.0",
-    "gh-pages": "^6.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.1",
@@ -38,5 +37,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
   }
 }
